# openg2p-social-registry

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  test-pre-requirements.txt  test-requirements.txt
.github/workflows/: test.yml
g2p_connect_registry_rest_api/: README.rst  __manifest__.py  schema.py
g2p_connect_registry_rest_api/data/: fastapi_endpoint_g2p_connect.xml  ir_config_params.xml
g2p_connect_registry_rest_api/models/: __init__.py
g2p_connect_registry_rest_api/routers/: __init__.py  registry_search.py
g2p_connect_registry_rest_api/schemas/: __init__.py  header.py  message.py  registry_search.py
g2p_dci_api_server/: README.rst  __manifest__.py  schema.py
g2p_lock_unlock/: README.rst  __manifest__.py
g2p_oauth/: __manifest__.py
g2p_portal_base/: README.md  __manifest__.py
g2p_registration_portal/: __manifest__.py
g2p_registration_portal_user/: README.rst  __manifest__.py
g2p_registry_g2p_connect_rest_api/: README.md  README.rst  __manifest__.py
g2p_registry_id_deduplication/: README.md  README.rst  __init__.py  __manifest__.py
g2p_self_service_portal/: README.rst  __init__.py  __manifest__.py
g2p_social_registry/: README.md  README.rst  __init__.py  __manifest__.py
g2p_social_registry_dashboard/: README.md  __init__.py  __manifest__.py
g2p_social_registry_deduplication/: README.rst  __manifest__.py
g2p_social_registry_model/: README.md  __manifest__.py
g2p_social_registry_proxy_means_test/: README.md
g2p_social_registry_theme/: README.rst  __manifest__.py
g2p_social_registry_theme_muk/: README.rst  __manifest__.py
g2p_theme_backend/: README.rst  __manifest__.py
(+213 files in other folders)
