[project]
name = "odoo-addons-openg2p-social-registry"
version = "0.0.0"
dependencies = [
    "odoo-addon-g2p-odk-user-mapping @ {root:uri}/g2p_odk_user_mapping",
    "odoo-addon-g2p-portal-base @ {root:uri}/g2p_portal_base",
    "odoo-addon-g2p-registration-portal @ {root:uri}/g2p_registration_portal",
    "odoo-addon-g2p-registry-g2p-connect-rest-api @ {root:uri}/g2p_registry_g2p_connect_rest_api",
    "odoo-addon-g2p-registry-id-deduplication @ {root:uri}/g2p_registry_id_deduplication",
    "odoo-addon-g2p-social-registry @ {root:uri}/g2p_social_registry",
    "odoo-addon-g2p-social-registry-theme @ {root:uri}/g2p_social_registry_theme",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
